src/objects/PS_ExceptionLogger__c.object
<CustomObject>
    <description>KP:For handling exception</description>
    <fields>
        <fullName>ApexClassName__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallingMethod__c</fullName>
        <label>Calling Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterfaceName__c</fullName>
        <label>Interface Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLogin__c</fullName>
        <label>UserLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception Logger</label>
    <nameField>
        <displayFormat>Ex-{0000}</displayFormat>
        <label>ExceptionNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>